// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledSelect /> should render the component 1`] = `
<styled.div>
  <Select
    arrowRenderer={[Function]}
    autosize={true}
    backspaceRemoves={true}
    backspaceToRemoveMessage="Press backspace to remove {label}"
    clearAllText="Clear all"
    clearRenderer={[Function]}
    clearValueText="Clear value"
    clearable={true}
    closeOnSelect={true}
    deleteRemoves={true}
    delimiter=","
    disabled={false}
    dropdownComponent={[Function]}
    escapeClearsValue={true}
    filterOptions={[Function]}
    ignoreAccents={true}
    ignoreCase={true}
    inputProps={Object {}}
    isLoading={false}
    joinValues={false}
    labelKey="label"
    matchPos="any"
    matchProp="any"
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    noResultsText="No results found"
    onBlurResetsInput={true}
    onCloseResetsInput={true}
    onSelectResetsInput={true}
    openOnClick={true}
    optionComponent={[Function]}
    optionGroupComponent={[Function]}
    pageSize={5}
    placeholder="Select..."
    removeSelected={true}
    required={false}
    rtl={false}
    scrollMenuIntoView={true}
    searchable={true}
    simpleValue={false}
    tabSelectsValue={true}
    trimFilter={true}
    valueComponent={[Function]}
    valueKey="value"
  />
</styled.div>
`;

exports[`<StyledSelectFull /> should render the component 1`] = `
<StyledSelect
  className="sc-htpNat daVAfG"
/>
`;

exports[`<StyledSelectSmall /> should render the component 1`] = `
<StyledSelect
  className="sc-bwzfXH IEEeW"
/>
`;
